<resources>
    <string name="app_name">Manipur Singham Last</string>
    <string name="kerala_lottery">Manipur Singham Last</string>
    <string name="check_latest_lottery_results_and_first_prize_last_digit">Check latest lottery results and first prize last digit</string>
    <string name="share_app">Share App</string>
    <!-- Home Screen -->
    <string name="first_prize_jodi">First Prize Last Jodi Number</string>
    <string name="first_prize_single">First Prize Last Number</string>
    <string name="number_combination">Number Combination</string>
    <string name="show_result">Show Result</string>

    <!-- App Description -->
    <string name="app_description">Check latest lottery results and number combinations</string>
    
    <!-- Error messages -->
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    
    <!-- PDF Viewer -->
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="no_pdfs_available">No PDFs available</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="_11_00_am">11:00 AM</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="_4_00_pm">4:00 PM</string>
    <string name="_7_00_pm">7:00 PM</string>
    <string name="_9_00_pm">9:00 PM</string>
    <string name="no_data_available">No data available</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="enter_4_digit_number">Enter 4-digit number</string>
    <string name="search">Search</string>
    <string name="search_number">Search number...</string>
</resources>