<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Date Header -->
        <TextView
            android:id="@+id/headerDate"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/date"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="@dimen/_4sdp"
            android:background="@drawable/bg_box_green"
            app:layout_constraintEnd_toStartOf="@+id/header1130"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25" />

        <!-- 11:00 Header -->
        <TextView
            android:id="@+id/header1130"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_4sdp"
            android:text="@string/_11_00_am"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/bg_box_green"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/headerDate"
            app:layout_constraintEnd_toStartOf="@+id/header1500"
            app:layout_constraintStart_toEndOf="@id/headerDate"
            app:layout_constraintTop_toTopOf="@+id/headerDate"
            app:layout_constraintWidth_percent="0.15" />

        <!-- 12:00 Header -->
        <TextView
            android:id="@+id/header1500"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_4sdp"
            android:text="@string/_12_00_pm"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/bg_box_green"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/headerDate"
            app:layout_constraintEnd_toStartOf="@+id/header1700"
            app:layout_constraintStart_toEndOf="@id/header1130"
            app:layout_constraintTop_toTopOf="@+id/headerDate"
            app:layout_constraintWidth_percent="0.15" />

        <!-- 4:00 Header -->
        <TextView
            android:id="@+id/header1700"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_4sdp"
            android:text="@string/_4_00_pm"
            android:background="@drawable/bg_box_green"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/headerDate"
            app:layout_constraintEnd_toStartOf="@+id/header2030"
            app:layout_constraintStart_toEndOf="@id/header1500"
            app:layout_constraintTop_toTopOf="@+id/headerDate"
            app:layout_constraintWidth_percent="0.15" />

        <!-- 7:00 Header -->
        <TextView
            android:id="@+id/header2030"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_4sdp"
            android:text="@string/_7_00_pm"
            android:background="@drawable/bg_box_green"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/headerDate"
            app:layout_constraintEnd_toStartOf="@+id/header2200"
            app:layout_constraintStart_toEndOf="@id/header1700"
            app:layout_constraintTop_toTopOf="@+id/headerDate"
            app:layout_constraintWidth_percent="0.15" />

        <!-- 9:00 Header -->
        <TextView
            android:id="@+id/header2200"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:padding="@dimen/_4sdp"
            android:text="@string/_9_00_pm"
            android:background="@drawable/bg_box_green"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/headerDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/header2030"
            app:layout_constraintTop_toTopOf="@+id/headerDate"
            app:layout_constraintWidth_percent="0.15" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
