<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.showResult.ShowResultFragment"
        android:background="@drawable/bg_main_background">

        <TextView
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/show_result"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/bg_header"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.barteksc.pdfviewer.PDFView
            android:id="@+id/pdfView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintBottom_toTopOf="@+id/navigationLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:visibility="visible"
            android:background="@drawable/bg_main_background"/>

        <LinearLayout
            android:id="@+id/navigationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp">
                <Button
                    android:id="@+id/btnPrev"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/previous"
                    android:textColor="@color/white"
                    android:backgroundTint="#4CAF50"
                    android:enabled="false"
                    android:paddingVertical="12dp"
                    android:drawablePadding="8dp"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp">
                <Button
                    android:id="@+id/btnNext"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:backgroundTint="#4CAF50"
                    android:enabled="false"
                    android:paddingVertical="12dp"
                    android:drawablePadding="8dp"/>
            </FrameLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tvEmptyView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/no_pdfs_available"
            android:textAlignment="center"
            android:textSize="16sp"
            android:visibility="gone"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
